--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "body-parser": "^1.20.3",
     "crypto": "^1.0.1",
+    "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
